# FastHTML-Template-001

./: .env.example  .gitignore  README.md  alembic.ini  llms.txt  pyproject.toml
migrations/: env.py  script.py.mako
src/: cli.py  main.py  route_collector.py
src/modules/: __init__.py
src/modules/admin/: routes.py
src/modules/admin/components/: __init__.py  modal_form.py  model_table.py  navbar.py  pagination.py  renderers.py  sidebar.py
src/modules/auth/: models.py
src/modules/auth/components/: __init__.py  login.py  profile_forms.py  registration.py
src/modules/auth/components/reset_password/: forgot_pass.py  otp.py  reset_pass.py
src/modules/auth/routes/: callback.py  login.py  logout.py  oauth.py  profile.py  register.py
src/modules/auth/routes/reset-password/: forgot_password.py  otp.py  reset_password.py
src/modules/auth/services/: auth_service.py  fasthtml_auth.py
src/modules/public/components/: __init__.py  ctas.py  footer.py  hero.py  navbar.py  page.py
src/modules/public/routes/: about.py  index.py  page404.py  pricing.py
src/modules/shared/: models.py  templates.py  toaster.py  validators.py
src/modules/shared/db/: __init__.py  base.py  db.py  sqlmodel.py
src/modules/shared/libs/flowbite/: app_navbar.py  hero.py  home.py  login.py  navbar.py
src/modules/shared/libs/flowbite/auth/: auth_info.py  login.py  registration.py
src/modules/shared/libs/flowbite/contact/: contact_page.py
src/modules/shared/libs/flowbite/landing/: __init__.py  ctas.py  footer.py  hero.py  navbar.py  page.py
(+3 files in other folders)
